Se mejoran los tamaños de la fuente y se cambia la misma

--- a/calculadora_comision.html
+++ b/calculadora_comision.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 		<title>Calculadora</title>
     <link rel="stylesheet" href="./styles_calculadora.css">
 </head>
@@ -53,7 +53,7 @@
             
       </section>
          
-        <button id="boton-calcular" class="boton">Calcular</button>
+        <button id="boton-calcular" class="boton">CALCULAR</button>
 
       <section id="resultado-programa">
 
@@ -66,7 +66,7 @@
 
       <section id="reiniciar">
 
-          <button id="boton-reiniciar" class="boton">Hacer otra operación</button>
+          <button id="boton-reiniciar" class="boton">HACER NUEVA SIMULACIÓN</button>
 
       </section>
 
